# toybridge

./: .gitignore  README.md  ble_worker.py  control_venus.py  pyproject.toml  sniff_cachito.py
1-discover/: auto_explore.py  realtime_scan.py  scan_device.py
2-reverse/: analyze_protocol.py  bruteforce_test.py  connect_venus.py  explore_venus.py  hold_venus.py  parse_pklg.py  replay_test.py  test_auth.py
3-control/: sniff_cachito.py
4-bridge/: server.py
4-bridge/clawhub-skill/venus-ble-vibrator/: SKILL.md
clawhub-skill/venus-ble-vibrator/: SKILL.md
docs/: protocol.md
