[project]
name = "claudetotoy"
version = "0.1.0"
description = "Control BLE intimate toys with Claude AI via MCP — reverse-engineered Cachito protocol"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleak>=2.1.1",
    "mcp[cli]>=1.26.0",
    "pyobjc-framework-corebluetooth>=12.1",
]
